@@ -47,6 +47,7 @@ typedef enum event_type {
   EVENT_TYPE_INTERRUPT,
   EVENT_TYPE_NMI,
   EVENT_TYPE_NULL,
+  EVENT_TYPE_RZX_SENTINEL,
   EVENT_TYPE_TRDOS_CMD_DONE,
   EVENT_TYPE_TRDOS_INDEX,
   EVENT_TYPE_TIMER,
